fixing tabs on mobile

--- a/index.css
+++ b/index.css
@@ -49,8 +49,7 @@ html {
 
     .tab {
         position: absolute;
-        left: 50%;
-        top: 0%;
+        width:100%;
         transform: translateX(-50%);
         font-size: 10px;
     }
